# ollama-voice--sv

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .venv  Dockerfile  config.py  main.py  music.py  pyproject.toml  schemas.py  state.py  voice_commands.py
backend/routes/: chat.py  health.py  language.py  music.py  transcribe.py  tts.py
backend/services/: language.py  memory.py  ollama.py  tts.py  vad.py  whisper.py
backend/ws/: chat.py  voice.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AudioPlayer.tsx  LanguageToggle.tsx  NowPlaying.tsx  StatusLabel.tsx  VoiceRecorder.tsx  Waveform.tsx
frontend/hooks/: useMusicPlayer.ts  useVoicePipeline.ts
frontend/lib/: api.ts
scripts/: ollama-init.sh
