[project]
name = "voice-ai-backend"
version = "1.0.0"
description = "Lokal Röst-AI Assistent - Swedish voice assistant backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "faster-whisper>=1.0.1",
    "httpx>=0.26.0",
    "ctranslate2>=4.6.3",
    "webrtcvad>=2.0.10",
    "piper-tts>=1.2.0",
    "tokenizers>=0.20",
]

[project.scripts]
serve = "main:run_server"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
